# dioxus-shareables

./: Cargo.toml  LICENSE  README.md  deny.toml
src/: arcmap.rs  lib.rs  list.rs  shared.rs  struct.rs
src/struct/: assoc_type.rs  mod.rs
