[package]
name = "dioxus-shareables"
authors = ["Tamvana Makuluni"]
version = "0.2.4"
edition = "2021"
license = "MIT"
description = "Hooks for sharing structures between components."
documentation = "https://docs.rs/dioxus-shareables"
repository = "https://github.com/emakman/dioxus-shareables"
readme = "README.md"
keywords = ["dioxus"]
include = ["src/**/*.rs", "Cargo.toml", "LICENSE"]

[features]
debug = []
dioxus-git = []

[dependencies]
dioxus-core = "0.2.1"
parking_lot = "0.12.1"
paste = "1"

[dev-dependencies]
dioxus = "0.2.4"
