[package]
name = "dioxus-shareables"
authors = ["Tamvana Makuluni"]
version = "0.3.2"
edition = "2021"
license = "MIT"
description = "Hooks for sharing structures between components."
documentation = "https://docs.rs/dioxus-shareables"
repository = "https://github.com/emakman/dioxus-shareables"
readme = "README.md"
keywords = ["dioxus"]
include = ["src/**/*.rs", "Cargo.toml", "LICENSE"]

[features]
debug = []
dioxus-git = []

[dependencies]
dioxus-core = { package = "dioxus-core", version = "0.3.2" }
paste = "1"
rustc-hash = "1.1.0"

[dev-dependencies]
dioxus = { package = "dioxus", version = "0.3.1" }
